src/test/testData/docker/DS026/Dockerfile.denied
<error descr="Potential secret in ENV key found: PASSWORD">ENV PASSWORD=changeme</error>
FROM ubuntu:21
